--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "./dist/lib/index.js",
   "types": "./dist/lib/index.d.ts",
   "author": "Khaliq Gant <khaliqgant@gmail.com>",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/khaliqgant/simple-fork"
+  },
   "license": "MIT",
   "engines": {
     "node": "^10"
